# python-project-83

./: Makefile  README.md  build.sh  database.sql  pyproject.toml
 page_analyzer/: app.py
page_analyzer/: app.py  checker.py  db.py  repository.py  utils.py  validator.py
page_analyzer/templates/: base.html  index.html  not_found.html  url.html  urls.html
page_analyzer/templates/errors/: 500.html
page_analyzer/templates/includes/: footer.html  head.html  messages.html  nav.html
page_analyzer/templates/urls/: detail.html  list.html
templates/: index.html
