[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Sesiunina Olga <sesyunina.olga7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^7.0.0"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
Flask = "^3.0.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
